--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ button{
         color:white;
     }
     #subBox>button, #subBox>span>button{
-        font-size:2vw;
+        font-size:0.8em;
         padding:1.5vw;
     }
 }
