--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ button{
     display:flex;
     flex-direction:column;
     justify-content:center;
+    left:-50vw;
     background-color:rgb(24, 24, 24);
     z-index:1;
 }
