--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ button{
     flex-wrap:wrap;
     width:100%;
     height:36vw;
-    overflow:hidden;
+    
 }
 .category-item{
     width:11vw;
@@ -252,7 +252,6 @@ button{
     }
     #category-box{
         flex:4.5;
-        overflow:hidden;
     }
     .movie-text{
         font-size:4vw;
@@ -329,36 +328,53 @@ button{
 }
 @media (max-width:500px){
     #movies{
-        height:300vw;
+        height:330vw;
+        overflow:hidden;
     }
     #current-box{
         flex:4;
+    }
+    #current-movie{
+        width:80vw;
+    }
+    #current-list{
+        width:1760vw;
+        transform:translateX(-80vw);
+    }
+    .current-item{
+        width:80vw;
     }
     #category-box{
         flex:6;
     }
     #category-list{
-        height:170vw;
+        width:100%;
+        height:190vw;
     }
     #list{
         height:95%;
+        justify-content:space-between;
     }
     .category-item{
-        width:29vw;
+        width:36vw;
     }
     .category-item img{
-        height:40vw;
+        height:50vw;
     }
     .category-item p{
-        font-size:2.4vw;
+        font-size:3vw;
     }
     #pagination{
         height:5%;
     }
     #pagination button{
-        font-size:3vw;
+        font-size:4vw;
         padding:1.5vw;
         color:white;
+    }
+    #miniButton button{
+        font-size:4vw;
+        margin:3vw 1vw;
     }
     #subBox>button, #subBox>span>button{
         font-size:0.8em;
