--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ button{
     background:none;
     border:none;
 }
+img{
+    vertical-align:bottom;
+}
 #container{
     width:80vw;
     margin:auto;
@@ -235,6 +238,69 @@ button{
     font-size:0.9em;
     text-align:end;
     padding:0.8vw;
+}
+#movie_information{
+    display:none;
+    position:fixed;
+    top:50px;
+    left:0;
+    right:0;
+    margin:auto;
+    width:30vw;
+    border-radius:5%;
+    z-index:1;
+    background-color:rgb(24, 24, 24, 0.9);
+}
+#information_title{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
+    font-size:1.5vw;
+    font-weight:700;
+    padding:1vw;
+    text-align:center;
+    border-bottom:2px solid white;
+}
+#information_title p{
+    flex:1;
+}
+#information_title button{
+    font-size:1.5vw;
+    font-weight:700;
+    color:white;
+    right:1vw;
+    margin:auto 0;
+}
+.close_information:hover{
+    cursor: pointer;
+    color:rgb(168, 7, 7);
+}
+#information_section{
+    width:100%;
+    height:33vw;
+    overflow-y:auto;
+}
+#information_section img{
+    display:block;
+    margin:1vw auto;
+    width:70%;
+}
+#information_section p{
+    color:white;
+    font-size:1.2vw;
+    padding:1vw;
+}
+#movie_star{
+    text-align:center;
+    margin:auto;
+    color:white;
+    font-size:1.5vw;
+}
+#movie_rating{
+    color:white;
+    text-align:center;
+    font-size:1.2vw;
 }
 @media (max-width:1000px){
     #title{
