--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ img{
         font-size:4vw;
     }
     #information_section{
-        height:120vw;
+        height:80vh;
     }
     #information_section img{
         margin:3vw auto;
