--- a/style.css
+++ b/style.css
@@ -474,6 +474,7 @@ img{
     }
     #information_title{
         font-size:4vw;
+        padding:4vw;
     }
     #information_title button{
         font-size:4vw;
