--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ img{
     transform:translateX(-30vw);
 }
 .current-item{
+    position:relative;
     width:30vw;
     padding:0 0.2vw;/*여백을 없애기 위함*/
     height:100%;
@@ -221,7 +222,7 @@ img{
     flex-direction:column;
     justify-content:center;
     left:-50vw;
-    background-color:rgb(24, 24, 24);
+    background-color:rgb(24, 24, 24, 0.9);
     z-index:1;
 }
 #subBox>button{
@@ -238,6 +239,22 @@ img{
     font-size:0.9em;
     text-align:end;
     padding:0.8vw;
+}
+#current_information{
+    width:50%;
+    margin:3vw auto;
+    padding:1vw;
+    color:white;
+    font-size:1.3vw;
+    font-weight:700;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    right:0;
+    left:0;
+    z-index:1;
+    background-color:rgb(24, 24, 24, 0.8);
+    cursor:pointer;
 }
 #movie_information{
     position:fixed;
@@ -400,6 +417,10 @@ img{
     #click_keyword{
         font-size:4vw;
     }
+    #current_information{
+        font-size:3vw;
+        padding:2.5vw;
+    }
     #movie_information{
         width:60vw;
     }
@@ -477,6 +498,10 @@ img{
     #subBox>button, #subBox>span>button{
         font-size:0.8em;
         padding:1.5vw;
+    }
+    #current_information{
+        font-size:4vw;
+        padding:3vw;
     }
     #movie_information{
         width:100%;
