--- a/style.css
+++ b/style.css
@@ -218,17 +218,18 @@ img{
     position:fixed;
     top:0; bottom:0;
     width:50vw;
+    height:100vh;
     display:flex;
     flex-direction:column;
-    justify-content:center;
     left:-50vw;
     background-color:rgb(24, 24, 24, 0.9);
     z-index:1;
+    overflow-y:auto;
 }
 #subBox>button{
     cursor:pointer;
     font-size:0.9em;
-    padding:0.8vw;
+    padding:1vw;
     color:white;
 }
 #subBox>button:hover{
@@ -238,7 +239,7 @@ img{
     width:100%;
     font-size:0.9em;
     text-align:end;
-    padding:0.8vw;
+    padding:1vw;
 }
 #current_information{
     width:50%;
